fixed home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
@@ -19,6 +20,7 @@ body {font-family: "Lato", sans-serif}
     <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Games</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">About Us</a>
+    <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
         <a href="#" class="w3-bar-item w3-button">Merchandise</a>
@@ -37,6 +39,13 @@ body {font-family: "Lato", sans-serif}
   <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
 </div>
 
+<!-- <Home> -->
+  <!-- @todo: need fixing -->
+  <!-- <div class="mySlides w3-display-container w3-center">
+    <img src="images/p3rklogo.png" style="width:100%">
+  </div> -->
+
+
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
@@ -50,39 +59,40 @@ body {font-family: "Lato", sans-serif}
         <li>RED DEAD REDEMPTION 2</li>
         <li>Resident Evil Village</li>
     </ol>
+    </div>
 
     <div class="w3-content w3-display-container">
 
         <div class="w3-display-container mySlides">
-          <img src="alpha/images/fortnite.jpg" style="width:100%">
+          <img src="images/fortnite.jpg" style="width:100%">
           <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
             Fortnite
           </div>
         </div>
         
         <div class="w3-display-container mySlides">
-          <img src="alpha/images/csgo.jpg" style="width:100%">
+          <img src="images/csgo.jpg" style="width:100%">
           <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
             CS:GO
           </div>
         </div>
         
         <div class="w3-display-container mySlides">
-          <img src="alpha/images/gta.jpg" style="width:100%">
+          <img src="images/gta.jpg" style="width:100%">
           <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
             GTA V
           </div>
         </div>
 
         <div class="w3-display-container mySlides">
-            <img src="alpha/images/red.jpg" style="width:100%">
+            <img src="images/red.jpg" style="width:100%">
             <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
                 RED DEAD REDEMPTION 2
             </div>
           </div>
 
         <div class="w3-display-container mySlides">
-            <img src="alpha/images/resident.png" style="width:100%">
+            <img src="images/resident.png" style="width:100%">
             <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
                 Resident Evil Village
             </div>
@@ -98,6 +108,8 @@ body {font-family: "Lato", sans-serif}
             <p>
                 We love making games.
             </p>
+        </div>
+    </div>
  
 <!-- End Page Content -->
 </div>
