responsive canvas and random position

--- a/alpha/index.html
+++ b/alpha/index.html
@@ -12,5 +12,10 @@
     <script src="js/kontra.js"></script>
     <script src="js/game.js"></script>
 
+    <style>
+        #canvas {
+            background-color: aqua;
+        }
+    </style>
 </body>
 </html>
