--- a/alpha/index.html
+++ b/alpha/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alpha Games</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
@@ -14,7 +15,7 @@
 
     <style>
         #canvas {
-            background-color: aqua;
+            background-color : aquamarine;
         }
     </style>
 </body>
