--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">Games developed by us</h2>
     <ol>
-        <li>Fortnite</li>
+        <!-- <li>Fortnite</li>
         <li>CS:GO</li>
         <li>GTA 5</li>
         <li>RED DEAD REDEMPTION 2</li>
-        <li>Resident Evil Village</li>
+        <li>Resident Evil Village</li> -->
+        <li><a href="https:games.p3rkstudios.com/alpha" target="_blank">Alpha</a></li>
     </ol>
     </div>
 
