beta game added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@ body {font-family: "Lato", sans-serif}
         <li>GTA 5</li>
         <li>RED DEAD REDEMPTION 2</li>
         <li>Resident Evil Village</li> -->
-        <li><a href="https://games.p3rkstudios.com/alpha" target="_blank">Alpha</a></li>
+        <li><a href="/alpha" target="_blank">Alpha</a></li>
+        <li><a href="/beta" target="_blank">Beta</a></li>
     </ol>
     </div>
 
