--- a/beta/index.html
+++ b/beta/index.html
@@ -13,5 +13,6 @@
 <body>
   <script src="js/phaser.js"></script>
   <script src="js/game.js"></script>
+  <h3><p>To move - Left mouse button</p></h3>
 </body>
 </html>
