--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@ body {font-family: "Lato", sans-serif}
 
     <div class="w3-content w3-display-container">
 
+      <div class="w3-display-container mySlides">
+        <img src="images/beta.jpg" style="width:100%">
+        <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+          Beta
+        </div>
+      </div>
+
         <div class="w3-display-container mySlides">
           <img src="images/fortnite.jpg" style="width:100%">
           <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
