--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {font-family: "Lato", sans-serif}
       <div class="w3-display-container mySlides">
         <img src="images/beta.jpg" style="width:100%">
         <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
-          Beta
+          <a href="/beta">Beta</a>
         </div>
       </div>
 
