updated img of fortnite

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body {font-family: "Lato", sans-serif}
       </div>
 
         <div class="w3-display-container mySlides">
-          <img src="images/fortnite.jpg" style="width:100%">
+          <img src="images/fortnite.png" style="width:100%">
           <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
             Fortnite
           </div>
