--- a/index.html
+++ b/index.html
@@ -10,6 +10,44 @@
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
+body, html {
+    height: 100%;
+}
+
+#button{
+  background-color: #FFD700;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("images/p3rklogo.png");
+
+  /* Set a specific height */
+  height: 61%;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 </style>
 <body>
 
@@ -17,16 +55,9 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Games</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">About Us</a>
-    <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
-      <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Merchandise</a>
-        <a href="#" class="w3-bar-item w3-button">Extras</a>
-        <a href="#" class="w3-bar-item w3-button">Media</a>
-      </div>
+    <a href="#home" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    <a href="#games" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Games</a>
+    <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hide-small">About Us</a>
     </div>
     <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
   </div>
@@ -34,30 +65,27 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+  <a href="#home" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Home</a>>
   <a href="#games" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">GAMES</a>
-  <a href="#aboutUs" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ABOUT US</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
+  <a href="#about" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ABOUT US</a>>
 </div>
 
-<!-- <Home> -->
-  <!-- @todo: need fixing -->
-  <!-- <div class="mySlides w3-display-container w3-center">
-    <img src="images/p3rklogo.png" style="width:100%">
-  </div> -->
+<!-- Hero section -->
+<div class="hero-image" id="home">
+  <div class="hero-text">
+    <h1>P3RK STUDIOS</h1>
+    <button id="button"><a href="https://p3rkstudios.com" target="_blank">Visit</a></button>
+  </div>
+</div>
 
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
-  <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+  <!-- The Games Section -->
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="games">
     <h2 class="w3-wide">Games developed by us</h2>
     <ol>
-        <!-- <li>Fortnite</li>
-        <li>CS:GO</li>
-        <li>GTA 5</li>
-        <li>RED DEAD REDEMPTION 2</li>
-        <li>Resident Evil Village</li> -->
         <li><a href="/alpha" target="_blank">Alpha</a></li>
         <li><a href="/beta" target="_blank">Beta</a></li>
     </ol>
@@ -117,20 +145,20 @@ body {font-family: "Lato", sans-serif}
             <p>
                 We love making games.
             </p>
+            <img src="" alt="">
         </div>
+
+        
     </div>
  
 <!-- End Page Content -->
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge" id="about">
+  <a href="https://facebook.com" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+  <a href="https://instagram.com" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+  <a href="https://twitter.com" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
 </footer>
 
 <script>
