--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ body, html {
     <ol>
         <li><a href="/alpha" target="_blank">Alpha</a></li>
         <li><a href="/beta" target="_blank">Beta</a></li>
+        <li><a href="/gamma" target="_blank">Gamma</a></li>
     </ol>
     </div>
 
