--- a/gamma/index.html
+++ b/gamma/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <script src="js/phaser.js"></script>
     <title>Kannad Learning Game</title>
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <style>
       canvas { width: 100%; }
     </style>
