final version of delta

--- a/delta/index.html
+++ b/delta/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <script src="js/phaser.js"></script>
+    <title>Virtual Pet Game</title>
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <style>
       body {
         background: black;
