--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ body, html {
         <li><a href="/alpha" target="_blank">Alpha</a></li>
         <li><a href="/beta" target="_blank">Beta</a></li>
         <li><a href="/gamma" target="_blank">Gamma</a></li>
+        <li><a href="/delta" target="_blank">Delta</a></li>
     </ol>
     </div>
 
