--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@ body, html {
         </div>
       </div>
 
+      <div class="w3-display-container mySlides">
+        <a href="/delta" target="_blank"><img src="images/delta.jpg" style="width:100%"></a>
+        <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+          Delta
+        </div>
+      </div>
+
         <div class="w3-display-container mySlides">
           <a href="" target="_blank"><img src="images/fortnite.png" style="width:100%"></a>
           <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
