--- a/gamma/index.html
+++ b/gamma/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <script src="js/phaser.js"></script>
-    <title>Kannad Learning Game</title>
+    <title>Kannada Learning Game</title>
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <style>
       canvas { width: 100%; }
