epsilon game template

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ body, html {
         <li><a href="/beta" target="_blank">Beta</a></li>
         <li><a href="/gamma" target="_blank">Gamma</a></li>
         <li><a href="/delta" target="_blank">Delta</a></li>
+        <li><a href="/epsilon" target="_blank">Epsilon</a></li>
     </ol>
     </div>
 
@@ -106,6 +107,13 @@ body, html {
         <a href="/delta" target="_blank"><img src="images/delta.jpg" style="width:100%"></a>
         <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
           Delta
+        </div>
+      </div>
+
+      <div class="w3-display-container mySlides">
+        <a href="/epsilon" target="_blank"><img src="images/epsilon.jpg" style="width:100%"></a>
+        <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+          Epsilon
         </div>
       </div>
 
