--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ body, html {
         <li><a href="/gamma" target="_blank">Gamma</a></li>
         <li><a href="/delta" target="_blank">Delta</a></li>
         <li><a href="/epsilon" target="_blank">Epsilon</a></li>
+        <li><a href="https://capable-kataifi-dc01da.netlify.app/" target="_blank">Bank Robbery</a></li>
     </ol>
     </div>
 
