roll a ball build error fixed

--- a/rollaball/index.html
+++ b/rollaball/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/v1.1w.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/v1.1w.data.br",
-        frameworkUrl: buildUrl + "/v1.1w.framework.js.br",
-        codeUrl: buildUrl + "/v1.1w.wasm.br",
+        dataUrl: buildUrl + "/v1.1w.data",
+        frameworkUrl: buildUrl + "/v1.1w.framework.js",
+        codeUrl: buildUrl + "/v1.1w.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "P3RK STUDIOS",
         productName: "Rollaball",
