created a new arcade game and added it in website

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ body, html {
         <li><a href="/epsilon" target="_blank">Epsilon</a></li>
         <li><a href="https://capable-kataifi-dc01da.netlify.app/" target="_blank">Bank Robbery</a></li>
         <li><a href="/rollaball" target="_blank">Roll a Ball</a></li>
+        <li><a href="/arcadegame/" target="_blank">Arcade Game</a></li>
     </ol>
     </div>
 
