--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ body, html {
         <li><a href="https://capable-kataifi-dc01da.netlify.app/" target="_blank">Bank Robbery</a></li>
         <li><a href="/rollaball" target="_blank">Roll a Ball</a></li>
         <li><a href="/arcadegame/" target="_blank">Arcade Game</a></li>
+        <li><a href="/fruit catcher/" target="_blank">Fruit Catcher</a></li>
     </ol>
     </div>
 
