added supabase authentication and score keeping in fallin game

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ body, html {
         <li><a href="/rollaball" target="_blank">Roll a Ball</a></li>
         <li><a href="/arcadegame/" target="_blank">Arcade Game</a></li>
         <li><a href="/fruit catcher/" target="_blank">Fruit Catcher</a></li>
+        <li><a href="/falling game/" target="_blank">Falling Game</a></li>
     </ol>
     </div>
 
